fix: navbar background color and text contrast

--- a/src/app/global.css
+++ b/src/app/global.css
@@ -57,7 +57,7 @@
   display: flex;
   height: 50px;
   width: 375px;
-  background-color: #d9d9d9;
+  background-color: #d4d4d4;
   padding: 0 8px;
   animation: t 1.5s normal forwards;
   &.completed {
